--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,15 @@
 .App {
+    display: flex;
+    flex-direction: column;
+}
+
+.App > .content {
+    flex: 1 1 auto;
+    display: flex;
+}
+
+.App > .content > .tools {
+    width: 100px;
+    display: flex;
+    flex-direction: column;
 }
