--- a/src/css/Canvas.css
+++ b/src/css/Canvas.css
@@ -6,14 +6,15 @@
     scroll-snap-type: both mandatory;
     box-sizing: border-box;
     background: rgb(128, 128, 128);
+    scroll-padding: max( calc(50vh - ((var(--doc-height)/2) + 23px)) , 100px) max(calc(50% - (var(--doc-width)/2)), 100px);
 }
 
 .Canvas > * {
-    padding: 100px;
-    transform-origin: top left;
+    width: var(--doc-width);
+    padding: max( calc(50vh - ((var(--doc-height)/2) + 23px)) , 100px) max(calc(50% - (var(--doc-width)/2)), 100px);
 }
 .Canvas > * > * {
-    background: #ffffff;
+    background: url(Transparency10.png);
     position: relative;
 }
 .Canvas > * > * > * {
