--- a/src/css/Toolbar.css
+++ b/src/css/Toolbar.css
@@ -1,3 +1,15 @@
 .Toolbar {
   box-sizing: border-box;
 }
+
+.Toolbar .tool.selected {
+  cursor: default;
+  box-sizing: border-box;
+  background-color: #fff;
+  margin: 0;
+  padding: 1px 6px;
+  border-width: 2px;
+  border-style: outset;
+  border-color: #ccc;
+  border-image: initial;
+}
