--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,20 +1,12 @@
 .App {
   display: flex;
+  position: relative;
   flex-direction: column;
+  max-height: 100vh;
+  overflow: hidden;
 }
 
 .App > .content {
   flex: 1 1 auto;
   display: flex;
-  max-height: calc(100vh - 23px);
-}
-
-.App > .content > .tools {
-  width: 200px;
-  display: flex;
-  flex-direction: column;
-}
-
-.App > .tools > * {
-  flex: 0 0 auto;
 }
