--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -1,6 +1,4 @@
 .Menu {
-  height: 23px;
-  background: #ddd;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -8,6 +6,11 @@
 }
 
 .Menu > li {
+  display: flex;
+  flex-direction: column;
+}
+
+.fields {
   display: flex;
   flex-direction: column;
 }
