--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  height: 100vh;
+  height: calc(100vh - 21px);
   max-height: 100vh;
   overflow: hidden;
 }
@@ -24,10 +24,11 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  width: var(--button-radius);
+  width: var(--button-diameter);
   text-align: center;
+  box-sizing: border-box;
+  padding: 5px;
 }
-
 
 .App .side-menu > label {
   writing-mode: vertical-lr;
@@ -37,7 +38,7 @@
 .App .side-menu > label > input[type='range'] {
   flex: 1 1 auto;
   -webkit-appearance: slider-vertical;
-  width: calc(var(--button-radius) / 2);
+  width: calc(var(--button-diameter) / 2);
 }
 
 .App .menu > label {
