--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
   display: flex;
+  gap: 5px;
 }
 
 .Menu > li {
@@ -19,7 +20,8 @@
   background: transparent;
   flex-direction: row;
   align-items: center;
-  gap: 0.5rem;
+  transition: 0.5s;
+  gap: 0;
 }
 
 .Menu li > .text {
@@ -32,7 +34,14 @@
   text-overflow: clip;
 }
 
-.Menu:focus-within li > .text {
+.Menu .dropdown:focus-within li > .text {
   padding: 0.2rem 0.5rem;
   max-width: 100vw;
+}
+
+.Menu .dropdown:focus-within ul > li {
+  background: transparent;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
 }
