--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,6 +13,12 @@
 }
 
 body {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   margin: 0;
   background: var(--background-color);
   color: var(--text-color);
