Add center QuickStart centered styles and improve EditBrushes cleaner layout

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,6 +3,8 @@
   --doc-height: 200px;
   --button-diameter: 50px;
   --scroll-width: 10px;
+  --quick-start-width: 250px;
+  --quick-start-height: 200px;
   --main-color: #eb840f;
   --secondary-color: #636363;
   --background-color: #353535;
