--- a/src/css/QuickStart.css
+++ b/src/css/QuickStart.css
@@ -1,3 +1,12 @@
+.QuickStart {
+  position: absolute;
+  width: var(--quick-start-width);
+  height: var(--quick-start-height);
+  left: 50%;
+  top: 50%;
+  margin: calc(var(--quick-start-height) / -2) calc(var(--quick-start-width) / -2);
+}
+
 .QuickStart,
 .QuickStart > * {
   background: var(--background2-color);
