--- a/src/css/Canvas.css
+++ b/src/css/Canvas.css
@@ -3,10 +3,44 @@
   height: calc(100vh - var(--button-diameter) * 2 - 21px);
   width: calc(100% - var(--button-diameter) * 2);
   background: var(--background-color);
+  position: relative;
 }
 
 .Canvas > * {
   width: var(--doc-width);
+}
+
+.Canvas > .v-bar,
+.Canvas > .h-bar {
+    background: var(--background2-color);
+    z-index: 10;
+    position: absolute;
+}
+
+.Canvas > .v-bar > .handle,
+.Canvas > .h-bar > .handle {
+    background: var(--secondary-color);
+}
+
+.Canvas > .v-bar {
+    right: 0;
+    height: 100%;
+    width: var(--scroll-width);
+}
+
+.Canvas > .h-bar {
+    bottom: 0;
+    width: 100%;
+}
+
+.Canvas > .v-bar > .handle {
+    width: var(--scroll-width);
+    height: 200px;
+}
+
+.Canvas > .h-bar > .handle {
+    width: 200px;
+    height: var(--scroll-width);
 }
 
 .Canvas > * > * {
