--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,6 +14,10 @@
   --title-color: #ff7856;
 }
 
+html, body {
+  overscroll-behavior-x: none;
+}
+
 body {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
