Add partial no-antialiased option support for Texture brush

--- a/src/css/inputs/InputImage.css
+++ b/src/css/inputs/InputImage.css
@@ -7,6 +7,11 @@
   justify-content: center;
 }
 
+.InputImage > div {
+  display: flex;
+  justify-content: center;
+}
+
 .InputImage canvas {
   filter: brightness(0) invert(1);
 }
