--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  height: calc(100vh - 21px);
+  height: calc(100vh);
   max-height: 100vh;
   overflow: hidden;
 }
