Add css landscape lock support

--- a/src/css/Canvas.css
+++ b/src/css/Canvas.css
@@ -1,6 +1,6 @@
 .Canvas {
   overflow: hidden;
-  height: calc(100vh - var(--button-diameter) * 2);
+  height: calc(100svh - var(--button-diameter) * 2);
   width: calc(100vw - var(--button-diameter) * 2);
   background: var(--background2-color);
   position: relative;
@@ -8,7 +8,7 @@
 
 .Canvas > .viewport {
   overflow: hidden;
-  height: calc(100vh - var(--button-diameter) * 2 - var(--scroll-width));
+  height: calc(100svh - var(--button-diameter) * 2 - var(--scroll-width));
   width: calc(100vw - var(--button-diameter) * 2 - var(--scroll-width));
   background: var(--background2-color);
   position: relative;
@@ -64,4 +64,20 @@
 
 .Canvas > .viewport > * > * > * > * {
   position: absolute;
+}
+
+
+@media screen and (orientation:portrait) { 
+
+  .Canvas {
+    transform: rotate(90deg);
+    width: calc(100vw - var(--button-diameter) * 2);
+    height: calc(100svh - var(--button-diameter) * 2);
+  }
+  
+  .Canvas > .viewport {
+    width: calc(100vw - var(--button-diameter) * 2 - var(--scroll-width));
+    height: calc(100svh - var(--button-diameter) * 2 - var(--scroll-width));
+  }
+
 }
