--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,8 +3,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  height: calc(100vh);
-  max-height: 100vh;
+  height: calc(100svh);
+  max-height: 100svh;
   overflow: hidden;
 }
 
@@ -15,7 +15,20 @@
 }
 
 .App .side-menu {
+  display: flex;
   flex-direction: column;
+  position: absolute;
+  height: calc(100svh - 2 * var(--button-diameter));
+  top: var(--button-diameter);
+  z-index: 5;
+}
+
+.App .menu{
+  display: flex;
+  position: absolute;
+  width: calc(100% - 2 * var(--button-diameter));
+  left: var(--button-diameter);
+  z-index: 5;
 }
 
 .App .side-menu > label,
@@ -50,4 +63,37 @@
 .App > .content {
   flex: 1 1 auto;
   display: flex;
+}
+
+.LeftMenu {
+  left: 0;
+}
+
+.RightMenu {
+  right: 0;
+}
+
+.TopMenu {
+  top: 0;
+}
+
+.BottomMenu {
+  bottom: 0;
+}
+
+@media screen and (orientation:portrait) { 
+
+  .App {
+    height: calc(100vw);
+    max-height: 100vw;
+  }
+  
+  .App .side-menu {
+    height: calc(100vw - 2 * var(--button-diameter));
+  }
+  
+  .App .menu{
+    width: calc(100svh - 2 * var(--button-diameter));
+  }
+
 }
