--- a/src/css/LayerMenu.css
+++ b/src/css/LayerMenu.css
@@ -7,7 +7,7 @@
 .layer-options {
   flex: 1 1 auto;
   display: flex;
-  height: 90vh;
+  height: 90svh;
 }
 
 .layer-options .menu {
@@ -60,4 +60,13 @@
 
 .layer-options .menu .list .selected {
   background: var(--secondary-color);
+}
+
+
+@media screen and (orientation:portrait) { 
+
+  .layer-options {
+    height: 90vw;
+  }
+
 }
